Revision history for Perl extension Catalyst::Plugin::Authentication

     - Fix typos in documentation (RT#49476)
     - Fix compatibilty with Catalyst 5.70 (RT#50466)

0.10015 Tue Sep 1 01:40:36 BST 2009

     - Remove (undeclared) dependency on Class::Data::Inhertiable (RT#49086)
     - Remove dependency on Test::MockObject
     - Fix repository metadata in META.yml / Makefile.PL
     - Make POD tests author side only.

0.10014 Tue Aug 25 15:42:57 BST 2009

      - Don't always supply an "id" column in the authinfo passed to the store
        class in ::Credential::Remote. This means that it works better with
        the DBIC store. (t0m)

      - Make auth_realms method ensure authentication is initialized
        before calling methods which get created during auth initialization.
        Fixes back compat cases where auth store is in the plugin list
        before the authentication plugin. (t0m)

0.10013 Fri Jun 19 16:08:00 BST 2009
      - Add a username_field config item to ::Credential::Remote
        (Nigel Metheringham)
      - Die with a useful error message if we are about to try to restore
        a user from a realm which does not exist. (t0m)

0.10012 Sat Jun  6 10:58:43 BST 2009
      - Add Catalyst::Authentication::Credential::Remote which authenticates you
        directly from environment variables passed by your web server. This
        allows the use of SSL client certificates, NTLM, or just basic/digest
        auth done at the web server level to be used to authenticate users
        to your Catalyst application (kmx)
        - Tests for this
      - Change ->config invocations to be best practices (t0m)
      - Note about session auto-vification even when use_session is set
        to false (robert).
      - Note about how a realms key used to be needed to unconfuse people
        running an old version, but browsing the docs on search.cpan (ruoso)

0.10011 Sun Mar  8 23:32:12 GMT 2009